--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 
  </div>
 
-        <input type="text" id="answer-input" placeholder="Escribe el nombre del Yo-kai">
+        <input type="text" id="answer-input" placeholder="Type the Yo-kai's name">
         <div class="info">
             <p>Time: <span id="time">00:00:00</span></p>
             <p>Score: <span id="score">0</span></p>
